[update] 完成学生端全部頁面的升級

--- a/oes-core/src/main/resources/templates/include/css.html
+++ b/oes-core/src/main/resources/templates/include/css.html
@@ -10,8 +10,12 @@
 <!-- icon -->
 <link rel="shortcut icon" href="/static/images/favicon.ico"/>
 <!-- Select 2 -->
+<link rel="stylesheet" href="/webjars/AdminLTE/3.0.0/plugins/select2/css/select2.min.css"/>
 <link rel="stylesheet" href="/webjars/AdminLTE/3.0.0/plugins/select2-bootstrap4-theme/select2-bootstrap4.min.css"/>
-
+<!-- Toastr -->
+<link rel="stylesheet" href="/webjars/AdminLTE/3.0.0/plugins/toastr/toastr.min.css">
+<!-- jq-confirm -->
+<link rel="stylesheet" href="/static/plugins/jquery-confirm/jquery-confirm.min.css">
 <style>
     body {
         font-family: 'Microsoft Yahei', Arial, Helvetica, sans-serif;
