--- a/oes-core/src/main/resources/templates/include/js.html
+++ b/oes-core/src/main/resources/templates/include/js.html
@@ -16,3 +16,7 @@
 <script src="/webjars/AdminLTE/3.0.0/plugins/moment/moment-with-locales.min.js"></script>
 <!-- layer -->
 <script src="/static/plugins/layer/layer.js"></script>
+<!-- Toastr -->
+<script src="/webjars/AdminLTE/3.0.0/plugins/toastr/toastr.min.js"></script>
+<!-- jq-confirm -->
+<script src="/static/plugins/jquery-confirm/jquery-confirm.min.js"></script>
