--- a/oes-core/src/main/resources/templates/student/include/sider.html
+++ b/oes-core/src/main/resources/templates/student/include/sider.html
@@ -1,6 +1,6 @@
 <aside class="main-sidebar elevation-4 sidebar-dark-success">
     <!-- Brand Logo -->
-    <a href="#" class="brand-link navbar-success"">
+    <a href="#" class="brand-link navbar-success">
         <img src="/webjars/AdminLTE/3.0.0/dist/img/AdminLTELogo.png" alt="AdminLTE Logo"
              class="brand-image img-circle elevation-3"
              style="opacity: .8">
