--- a/oes-core/src/main/resources/templates/teacher/major/api.html
+++ b/oes-core/src/main/resources/templates/teacher/major/api.html
@@ -2,7 +2,7 @@
 
     // 删除专业信息
     function deleteMajor(id) {
-        layer.confirm("确定删除专业吗?", function () {
+        OesUtil.confirm('确定删除专业吗?', function () {
             $.post("/api/major/delete/" + id).done(function (data) {
                 if (data.state === "success") {
                     layer.msg("删除成功!");
@@ -11,63 +11,61 @@
                     layer.msg(data.message);
                 }
             })
-        });
-    };
-
-    // 获取专业信息
-    function getMajor(id) {
-        $.get("/api/major/" + id, function (data) {
-            $('.id').val(data.id);
-            $('.major').val(data.major);
-            $('.academyId').val(data.academyId).select2({width: "100%"});
         })
     }
 
-    // 启动修改模态框
-    $(".goUpdate").click(function () {
-        $("#update-modal").modal({
-            show: true,
-            backdrop: 'static'
-        });
+    // 获取专业信息并启动修改模态框
+    function goUpdate(id) {
+        $.get("/api/major/" + id, function (data) {
+            $('.id').val(data.id);
+            $('.major').val(data.major);
+            $('.academyId').val(data.academyId).select2({theme: 'bootstrap4'});
+            $("#update-modal").modal({
+                show: true,
+                backdrop: 'static'
+            });
+        })
+    }
 
-        // 更新专业信息
-        $("#updateBtn").click(function () {
-            layer.confirm("确定修改信息吗?", function () {
-                let data = $('#update-form').serialize();
-                $.post("/api/major/update/", data).done(function (data) {
-                    if (data.state === "success") {
-                        layer.msg("修改成功!");
-                        window.location.reload();
-                    }
-                })
+
+    // 更新专业信息
+    $("#updateBtn").click(function () {
+        OesUtil.confirm('确定修改信息吗?', function () {
+            let data = $('#update-form').serialize();
+            $.post("/api/major/update/", data).done(function (data) {
+                if (data.state === "success") {
+                    layer.msg("修改成功!");
+                    window.location.reload();
+                }
             })
         })
     });
 
     // 启动新增模态框
-    $("#goSave").click(function () {
+    function goSave() {
         $("#save-modal").modal({
             show: true,
             backdrop: 'static'
         });
+    }
 
-        // 增加专业信息
-        $("#saveBtn").click(function () {
-            layer.confirm("确定增加专业吗?", function () {
-                let data = $('#save-form').serialize();
-                $.post("/api/major/save/", data).done(function (data) {
-                    if (data.state === "success") {
-                        layer.msg("增加成功!");
-                        window.location.reload();
-                    }
-                })
+    // 增加专业信息
+    $("#saveBtn").click(function () {
+        OesUtil.confirm('确定增加专业吗?', function () {
+            let data = $('#save-form').serialize();
+            $.post("/api/major/save/", data).done(function (data) {
+                if (data.state === "success") {
+                    layer.msg("增加成功!");
+                    window.location.reload();
+                }
             })
         })
     });
 
     // 分学院搜索
     $("#findAcademy").select2({
-        width: "200px"
+        width: "200px",
+        theme: 'bootstrap4'
     }).change(function () {
         // 调用接口
         let id = $('#findAcademy').val();
@@ -82,18 +80,6 @@
         $.each(data, function (index, e) {
             options += "<option value=" + e.id + ">" + e.name + "</option>";
         });
-        $(".academySelect").append(options).val('${curAcademyId}').select2();
-    });
-
-
-    //分页
-    $('#pagination-demo').twbsPagination({
-        totalPages: "${page.pages}",
-        visiblePages: 5,
-        first: '首页',
-        last: '末页',
-        prev: '上一页',
-        next: '下一页',
-        href: '/teacher/major?p={{number}}&academyId=' + '${curAcademyId}',
+        $(".academySelect").append(options).val('${curAcademyId}').select2({theme: 'bootstrap4'});
     });
 </script>
