--- a/oes-core/src/main/resources/templates/teacher/question/update-modal.html
+++ b/oes-core/src/main/resources/templates/teacher/question/update-modal.html
@@ -3,51 +3,52 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
+                <h4 class="modal-title">更新题目</h4>
                 <button type="button" class="close" data-dismiss="modal"><span
                         aria-hidden="true">&times;</span>
                 </button>
-                <h4 class="modal-title">更新题目</h4>
             </div>
             <div class="modal-body">
                 <div class="form-group">
                     <form id="update-form">
                         <div class="form-group">
                             <label>名称 </label>
-                            <input type="hidden" class="form-control id" name="id" readonly="readonly"/>
-                            <textarea class="form-control questionName" name="questionName" rows="2"></textarea>
+                            <input type="hidden" class="form-control" id="id" name="id" readonly="readonly"/>
+                            <textarea class="form-control" id="questionName" name="questionName" rows="2"></textarea>
                         </div>
                         <div class="form-group">
                             <label>选项A </label>
-                            <input class="form-control optionA" name="optionA"/>
+                            <input class="form-control" id="optionA" name="optionA"/>
                         </div>
                         <div class="form-group">
                             <label>选项B </label>
-                            <input class="form-control optionB" name="optionB"/>
+                            <input class="form-control" id="optionB" name="optionB"/>
                         </div>
                         <div class="form-group">
                             <label>选项C </label>
-                            <input class="form-control optionC" name="optionC"/>
+                            <input class="form-control" id="optionC" name="optionC"/>
                         </div>
                         <div class="form-group">
                             <label>选项D </label>
-                            <input class="form-control optionD" name="optionD"/>
+                            <input class="form-control" id="optionD" name="optionD"/>
                         </div>
                         <div class="form-group">
                             <label>答案 </label>
-                            <textarea class="form-control answer" name="answer" rows="2" readonly="readonly"></textarea>
+                            <textarea class="form-control" id="answer" name="answer" rows="2"
+                                      readonly="readonly"></textarea>
                         </div>
                         <div class="form-group">
                             <label>所属课程 </label>
-                            <input class="form-control course" readonly="readonly"/>
+                            <input class="form-control" id="course" readonly="readonly"/>
                         </div>
                         <div class="form-group">
                             <label>类型 </label>
-                            <select class="typeSelect" name="typeId" id="typeId"></select>
+                            <select class="form-control typeSelect" name="typeId" id="typeId"></select>
                             <!-- 动态获取数据 -->
                         </div>
                         <div class="form-group">
                             <label>难易度 </label>
-                            <select class="form-control difficulty" name="difficulty">
+                            <select class="form-control" id="difficulty" name="difficulty">
                                 <option value="1">简单</option>
                                 <option value="2">一般</option>
                                 <option value="3">困难</option>
@@ -55,16 +56,17 @@
                         </div>
                         <div class="form-group">
                             <label>出题人 </label>
-                            <input class="form-control teacherName" readonly="readonly"/>
+                            <input class="form-control" id="teacherName" readonly="readonly"/>
                         </div>
                         <div class="form-group">
                             <label>解析 </label>
-                            <input class="form-control remark" name="remark"/>
+                            <input class="form-control" id="remark" name="remark"/>
                         </div>
                     </form>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-primary" onclick="updateQuestion()" data-dismiss="modal">更新</button>
+                    <button type="button" class="btn btn-primary" onclick="updateQuestion()" data-dismiss="modal">更新
+                    </button>
                     <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
                 </div>
             </div>
