--- a/oes-core/src/main/resources/templates/student/self/update-pass.html
+++ b/oes-core/src/main/resources/templates/student/self/update-pass.html
@@ -6,8 +6,6 @@
     <title>OES | 修改密码</title>
     <!-- css style -->
     <%include("../../include/css.html"){}%>
-    <!-- Toastr -->
-    <link rel="stylesheet" href="/webjars/AdminLTE/3.0.0/plugins/toastr/toastr.min.css">
 </head>
 <body class="hold-transition sidebar-mini layout-fixed layout-navbar-fixed layout-footer-fixed">
 <div class="wrapper">
@@ -27,7 +25,7 @@
                     </div>
                     <div class="col-sm-6">
                         <ol class="breadcrumb float-sm-right">
-                            <li class="breadcrumb-item"><a href="/student/${session.studentId}/update/pass">个人设置</a>
+                            <li class="breadcrumb-item"><a href="/student/update/password">个人设置</a>
                             </li>
                         </ol>
                     </div>
@@ -118,11 +116,8 @@
 </div>
 <!-- 引入全局 js 脚本文件 -->
 <%include("../../include/js.html"){}%>
-<script src="/static/plugins/layer/layer.js"></script>
 <!-- 校验 -->
 <script src="/webjars/AdminLTE/3.0.0/plugins/jquery-validation/jquery.validate.min.js"></script>
-<!-- Toastr -->
-<script src="/webjars/AdminLTE/3.0.0/plugins/toastr/toastr.min.js"></script>
 <!-- 接口 -->】
 <% include("update-pass-api.html"){} %>
 </body>
