--- a/oes-core/src/main/resources/templates/teacher/course/api.html
+++ b/oes-core/src/main/resources/templates/teacher/course/api.html
@@ -1,16 +1,15 @@
 <script>
     // 删除课程
     function deleteCourse(id) {
-        layer.confirm("确定删除该课程么?", function () {
-            $.get("/api/course/delete/" + id).done(function (data) {
+        OesUtil.confirm("确定删除该课程吗？", function () {
+            $.post("/api/course/delete/" + id).done(function (data) {
                 if (data.state === "success") {
-                    layer.msg("删除成功!");
-                    window.location.href = "/teacher/course/list";
+                    window.location.reload();
                 } else {
-                    layer.msg(data.message);
+                    toastr.error(data.message);
                 }
             })
-        });
+        })
     }
 
     //添加课程模态框打开
@@ -23,14 +22,15 @@
 
     // 增加课程
     $("#saveBtn").click(function () {
-        layer.confirm("确定添加该课程?", function () {
+        OesUtil.confirm('确定添加课程吗？', function () {
             let data = $('#save-form').serialize();
-            $.get("/api/course/save", data).done(function (data) {
+            $.post("/api/course/save", data).done(function (data) {
                 if (data.state === "success") {
-                    layer.msg("添加成功!");
-                    window.location.href = "/teacher/course/list";
+                    window.location.reload();
+                } else {
+                    toastr.error(data.message);
                 }
             })
-        });
+        })
     });
 </script>
