--- a/oes-core/src/main/resources/templates/teacher/major/list.html
+++ b/oes-core/src/main/resources/templates/teacher/major/list.html
@@ -6,27 +6,8 @@
     <title>OES | 专业管理</title>
     <!-- 引入全局 css 文件 -->
     <% include("../../include/css.html"){}%>
-    <style>
-        .table > tbody > tr:hover {
-            cursor: pointer;
-        }
-
-        .table > tbody > tr > td {
-            text-align: center;
-        }
-
-        th {
-            font-size: 15px;
-            text-align: center;
-        }
-
-        td {
-            font-size: 16px;
-            text-align: center;
-        }
-    </style>
 </head>
-<body class="hold-transition skin-blue sidebar-mini">
+<body class="hold-transition sidebar-mini layout-fixed layout-navbar-fixed layout-footer-fixed">
 <div class="wrapper">
     <!-- 引入头部 -->
     <% include("../include/header.html"){} %>
@@ -34,70 +15,120 @@
     <% layout("../include/sider.html",{name:"major"}){} %>
     <!-- 右侧内容部分 -->
     <div class="content-wrapper">
-        <section class="content">
-            <div class="box">
-                <div class="box-header with-border">
-                    <h3 class="box-title">专业管理</h3>
-                    <div class="box-tools pull-right">
-                        <button id="goSave" class="btn btn-vk btn-sm goSave"><i class="fa fa-plus-circle"></i> 新增专业
-                        </button>
+        <!-- Content Header (Page header) -->
+        <section class="content-header">
+            <div class="container-fluid">
+                <div class="row mb-2">
+                    <div class="col-sm-6">
+                        <h1>专业管理</h1>
                     </div>
-                </div>
-                <div class="with-border">
-                    <div class="box-tools pull-right">
-                        <label for="findAcademy">所属学院：</label>
-                        <select class="form-control academySelect" style="width: 200px" name="findAcademy" id="findAcademy">
-                            <!-- 填入数据 -->
-                        </select>
+                    <div class="col-sm-6">
+                        <ol class="breadcrumb float-sm-right">
+                            <li class="breadcrumb-item"><a href="/teacher/major">专业管理</a></li>
+                        </ol>
                     </div>
-                </div>
-                <div class="box-body no-padding">
-                    <table class="table table-hover">
-                        <tbody>
-                        <tr>
-                            <th style="width:17%">序号</th>
-                            <th style="width: 33%">所属学院</th>
-                            <th style="width: 30%">专业名称</th>
-                            <th style="width: 20%">操作</th>
-                        </tr>
-                        <% if(isEmpty(page.list)){ %>
-                        <tr>
-                            <td colspan="6">没有专业</td>
-                        </tr>
-                        <% } %>
-                        <% for(major in page.list){ %>
-                        <tr class="rowDetail" rel="${major.id}">
-                            <td>${majorLP.index}</td>
-                            <td hidden="hidden">${major.id}</td>
-                            <td rel="${major.academy.id}">${major.academy.name}</td>
-                            <td>${major.major}</td>
-                            <td>
-                                <button class="btn btn-success btn-sm goUpdate" onclick="getMajor(${major.id})"><i
-                                        class="fa"></i>编辑
-                                </button>
-                                <button class="btn btn-danger btn-sm delMajor" onclick="deleteMajor(${major.id})"><i
-                                        class="fa"></i>删除
-                                </button>
-                            </td>
-                        </tr>
-                        <% } %>
-                        </tbody>
-                    </table>
                 </div>
             </div>
-            <ul id="pagination-demo" class="pagination-sm pull-right"></ul>
+        </section>
+
+        <!-- table 部分 -->
+        <section class="content">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-12">
+                        <div class="card">
+                            <div class="card-header">
+                                <h3 class="card-title">课程内容</h3>
+                                <div class="card-tools">
+                                    <div class="input-group input-group-sm">
+                                        <button onclick="goSave()" class="btn btn-info btn-sm"><i
+                                                class="fa fa-plus"></i>&nbsp;新增课程
+                                        </button>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="card-header">
+                                <div class="card-tools">
+                                    <div class="input-group">
+                                        <select class="form-control academySelect"
+                                                name="findAcademy" id="findAcademy">
+                                            <!-- 填入数据 -->
+                                        </select>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- /.card-header -->
+                            <div class="card-body table-responsive p-0">
+                                <table id="example2" class="table table-bordered table-striped dataTable table-head-fixed text-nowrap" role="grid"
+                                       aria-describedby="example2_info">
+                                    <tbody>
+                                    <tr>
+                                        <th style="width:17%">序号</th>
+                                        <th style="width: 33%">所属学院</th>
+                                        <th style="width: 30%">专业名称</th>
+                                        <th style="width: 20%">操作</th>
+                                    </tr>
+                                    <% if(isEmpty(page.list)){ %>
+                                    <tr>
+                                        <td colspan="6">没有专业</td>
+                                    </tr>
+                                    <% } %>
+                                    <% for(major in page.list){ %>
+                                    <tr rel="${major.id}">
+                                        <td>${majorLP.index}</td>
+                                        <td hidden="hidden">${major.id}</td>
+                                        <td rel="${major.academy.id}">${major.academy.name}</td>
+                                        <td>${major.major}</td>
+                                        <td>
+                                            <button class="btn btn-success btn-sm"
+                                                    onclick="goUpdate(${major.id})">编辑
+                                            </button>
+                                            <button class="btn btn-danger btn-sm delMajor"
+                                                    onclick="deleteMajor(${major.id})">删除
+                                            </button>
+                                        </td>
+                                    </tr>
+                                    <% } %>
+                                    </tbody>
+                                </table>
+                            </div>
+                            <div class="card-footer clearfix">
+                                <ul class="pagination m-0 float-right">
+                                    <%for(var i=1;i<=page.pages;i++){ %>
+                                    <% if(page.pageNum == i){ %>
+                                    <li class="page-item active">
+                                        <a class="page-link" href="/teacher/major?p=${i}&academyId=${curAcademyId}">${i}</a>
+                                    </li>
+                                    <%}else{%>
+                                    <li class="page-item">
+                                        <a class="page-link" href="/teacher/major?p=${i}&academyId=${curAcademyId}">${i}</a>
+                                    </li>
+                                    <%}%>
+                                    <% }%>
+                                </ul>
+                            </div>
+                            <!-- /.card-body -->
+                        </div>
+                        <!-- /.card -->
+                    </div>
+                </div><!-- /.row -->
+            </div>
         </section>
     </div>
-    <!-- 增加学院模态框 -->
-    <% include("save-modal.html"){} %>
-    <!-- 修改学员模态框 -->
-    <% include("update-modal.html"){} %>
+    <aside class="control-sidebar control-sidebar-dark">
+        <!-- Control sidebar content goes here -->
+    </aside>
     <!-- 引入footer -->
-    <% include("../../include/footer.html"){} %>
+    <% include("../../include/footer.html"){}%>
+    <!-- 新增课程模态框 -->
+    <% include("save-modal.html"){} %>
+    <!-- 更新模态框 -->
+    <% include("update-modal.html"){} %>
 </div>
+</body>
+
 <!-- 引入全局 js 脚本文件 -->
 <% include("../../include/js.html"){} %>
-<script src="/static/plugins/jquery-pagination/jquery.twbsPagination.min.js"></script>
+<script src="/static/js/OesUtil.js"></script>
 <% include("api.html"){} %>
-</body>
 </html>
