--- a/oes-core/src/main/resources/templates/teacher/major/update-modal.html
+++ b/oes-core/src/main/resources/templates/teacher/major/update-modal.html
@@ -3,33 +3,33 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal"><span
-                        aria-hidden="true">&times;</span>
-                </button>
                 <h4 class="modal-title">修改专业信息</h4>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
             </div>
             <div class="modal-body">
                 <form id="update-form">
-                    <div class="form-group form_datetime">
+                    <div class="table">
                         <label for="id">ID</label>
                         <input type="text" name="id" class="form-control id"
                                id="id" readonly="readonly">
                     </div>
-                    <div class="form-group form_datetime">
+                    <div class="table">
                         <label for="academy">所属学院</label>
                         <select id="academy" name="academy" style="width: 100%" class="academyId academySelect">
                             <option value="">请选择</option>
                             <!-- 数据填充 -->
                         </select>
                     </div>
-                    <div class="form-group form_datetime">
+                    <div class="table">
                         <label for="major">专业名称</label>
                         <input type="text" name="major" class="form-control major"
                                id="major">
                     </div>
                 </form>
             </div>
-            <div class="modal-footer">
+            <div class="modal-footer justify-content-end">
                 <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
                 <button type="button" class="btn btn-primary" id="updateBtn">确定</button>
             </div>
