--- a/oes-core/src/main/resources/templates/teacher/question/list.html
+++ b/oes-core/src/main/resources/templates/teacher/question/list.html
@@ -6,178 +6,162 @@
     <title>OES | 题目列表</title>
     <!-- 引入全局 css 文件 -->
     <% include("../../include/css.html"){} %>
-    <style>
-        .table > tbody > tr:hover {
-            cursor: pointer;
-        }
-
-        .table > tbody > tr > td {
-            vertical-align: middle;
-        }
-
-        .star {
-            font-size: 20px;
-            color: #ff7400;
-        }
-
-        th {
-            font-size: 14px;
-            text-align: center;
-        }
-
-        td {
-            font-size: 14px;
-            text-align: center;
-        }
-
-    </style>
 </head>
+<style>
+    .table > tbody > tr:hover {
+        cursor: pointer;
+    }
+
+    .table > tbody > tr > td {
+        vertical-align: middle;
+    }
+</style>
 <body class="hold-transition skin-blue sidebar-mini">
-<!-- 增加学生信息模态框 -->
-<div class="modal fade" id="importModal">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal"><span
-                        aria-hidden="true">&times;</span>
-                </button>
-                <h4 class="modal-title">导入题目</h4>
-            </div>
-            <div class="modal-body">
-                <div class="form-group">
-                    <form method="post" id="importPaper">
-                        <div class="form-group">
-                            <label for="upload">导入试卷 </label>
-                            <input class="form-control btn btn-flat btn-warning btn-sm" style="border: none" type="file"
-                                   name="upload"
-                                   id="upload"/>
-                        </div>
-                    </form>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
 <div class="wrapper">
     <!-- 引入头部 -->
     <%include("../../teacher/include/header.html"){}%>
     <!-- 左侧菜单栏 -->
     <% layout("../../teacher/include/sider.html",{name:"question"}){} %>
+    <!-- 更新模态框 -->
+    <%include("update-modal.html"){} %>
+    <!-- 新增模态框 -->
+    <%include("save-modal.html"){} %>
     <!-- 右侧内容部分 -->
     <div class="content-wrapper">
-        <section class="content">
-            <div class="box">
-                <div class="box-header with-border">
-                    <h3 class="box-title">试题管理</h3>
-                    <div class="box-tools pull-right">
-                        <button class="btn btn-warning btn-sm" id="importBtn">
-                            <i class="fa fa-plus-circle"></i>
-                            导入试题
-                        </button>
-                        <button class="goSave btn btn-success btn-sm"><i class="fa fa-plus-circle"></i>
-                            新增试题
-                        </button>
+        <!-- Content Header (Page header) -->
+        <section class="content-header">
+            <div class="container-fluid">
+                <div class="row mb-2">
+                    <div class="col-sm-6">
+                        <h1>试题管理</h1>
                     </div>
-                </div>
-                <div class="box-tools">
-                    <div class="box-tools pull-right">
-                        <label for="typeId">类型：</label>
-                        <select class="form-control" name="typeId" id="typeId">
-                            <option value="" selected>全部</option>
-                            <% for( type in typeList ){ %>
-                            <% if(isNotEmpty(curTypeId)){ %>
-                            <% if(parseInt(curTypeId)==type.id){ %>
-                            <option value="${type.id}" selected>${type.typeName}</option>
-                            <% }else{ %>
-                            <option value="${type.id}">${type.typeName}</option>
-                            <% } %>
-                            <% }else{ %>
-                            <option value="${type.id}">${type.typeName}</option>
-                            <% } %>
-                            <% } %>
-                        </select>
-                        <label for="courseId">科目：</label>
-                        <select class="form-control" name="courseId" id="courseId">
-                            <option value="" selected>全部</option>
-                            <% for( course in courseList ){ %>
-                            <% if(isNotEmpty(curCourseId)){ %>
-                            <% if(parseInt(curCourseId)==course.id){ %>
-                            <option value="${course.id}" selected>${course.courseName}</option>
-                            <% }else{ %>
-                            <option value="${course.id}">${course.courseName}</option>
-                            <% } %>
-                            <% }else{ %>
-                            <option value="${course.id}">${course.courseName}</option>
-                            <% } %>
-                            <% } %>
-                        </select>
+                    <div class="col-sm-6">
+                        <ol class="breadcrumb float-sm-right">
+                            <li class="breadcrumb-item"><a href="/teacher/question">试题管理</a></li>
+                        </ol>
                     </div>
-                </div>
-                <div class="box-body no-padding">
-                    <table class="table table-hover">
-                        <tbody>
-                        <tr>
-                            <th style="width: 8%">题目编号</th>
-                            <th style="text-align: left;width:47% ">题目名称</th>
-                            <th style="width: 16%">题目类型</th>
-                            <th style="width: 9%">难易程度</th>
-                            <th style="width: 15%">操作</th>
-                        </tr>
-                        <% if(isEmpty(page.list)){ %>
-                        <tr>
-                            <td colspan="6">题库中还未添加题目</td>
-                        </tr>
-                        <% } %>
-                        <% for( question in page.list ){ %>
-                        <tr class="rowDetail" rel="${question.id}">
-                            <td style="width: 60px">${question.id}</td>
-                            <td style="text-align: left">${question.questionName}</td>
-                            <td style="width: 60px">
-                                ${question.typeId == 1?"单选题":''}
-                                ${question.typeId == 2?"多选题":''}
-                                ${question.typeId == 3?"判断题":''}
-                                ${question.typeId == 4?"填空题":''}
-                                ${question.typeId == 5?"简答题":''}
-                                ${question.typeId == 6?"编程题":''}
-                            </td>
-                            <td class="star" style="width: 60px">
-                                ${question.difficulty == "1"?'★':''}
-                                ${question.difficulty == "2"?'★ ★':''}
-                                ${question.difficulty == "3"?'★ ★ ★':''}
-                            </td>
-                            <td>
-                                <button onclick="getQuestion(${question.id})" class="goView btn btn-vk btn-sm">查看
-                                </button>
-                                <button onclick="getQuestion(${question.id})" class="goUpdate btn btn-warning btn-sm">
-                                    编辑
-                                </button>
-                                <button onclick="deleteQuestion(${question.id})" class="btn btn-danger btn-sm">删除
-                                </button>
-                            </td>
-                        </tr>
-                        <% } %>
-                        </tbody>
-                    </table>
                 </div>
             </div>
-            <ul id="pagination-demo" class="pagination pull-right"></ul>
+        </section>
+
+        <!-- table 部分 -->
+        <section class="content">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-12">
+                        <div class="card">
+                            <div class="card-header">
+                                <h3 class="card-title">试题信息</h3>
+                                <div class="card-tools">
+                                    <div class="input-group input-group-sm">
+                                        <button class="btn btn-warning btn-sm" id="importBtn">
+                                            <i class="fa fa-plus-circle"></i>
+                                            导入试题
+                                        </button>
+                                        &nbsp
+                                        <button class="goSave btn btn-success btn-sm"><i class="fa fa-plus-circle"></i>
+                                            新增试题
+                                        </button>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="card-header">
+                                <div class="card-tools">
+                                    <div class="input-group">
+                                        <select class="typeSelect float-right form-control" name="typeId"
+                                                id="findType"></select>&nbsp;
+                                        <select class="courseSelect float-right form-control" name="courseId"
+                                                id="findCourse"></select>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- /.card-header -->
+                            <div class="card-body table-responsive p-0">
+                                <table id="example2"
+                                       class="table table-bordered table-striped"
+                                       role="grid">
+                                    <tbody>
+                                    <tr>
+                                        <th style="width: 8%">题目编号</th>
+                                        <th style="width:54%">题目名称</th>
+                                        <th style="width: 8%">题目类型</th>
+                                        <th style="width: 10%">难易程度</th>
+                                        <th style="width: 15%">操作</th>
+                                    </tr>
+                                    <% if(isEmpty(page.list)){ %>
+                                    <tr>
+                                        <td colspan="6">题库中还未添加题目</td>
+                                    </tr>
+                                    <% } %>
+                                    <% for( question in page.list ){ %>
+                                    <tr class="rowDetail" rel="${question.id}">
+                                        <td style="width: 60px">${question.id}</td>
+                                        <td style="text-align: left">${question.questionName}</td>
+                                        <td style="width: 60px">
+                                            ${question.typeId == 1?"单选题":''}
+                                            ${question.typeId == 2?"多选题":''}
+                                            ${question.typeId == 3?"判断题":''}
+                                            ${question.typeId == 4?"填空题":''}
+                                            ${question.typeId == 5?"简答题":''}
+                                            ${question.typeId == 6?"编程题":''}
+                                        </td>
+                                        <td class="star" style="width: 60px">
+                                            ${question.difficulty == "1"?'★':''}
+                                            ${question.difficulty == "2"?'★ ★':''}
+                                            ${question.difficulty == "3"?'★ ★ ★':''}
+                                        </td>
+                                        <td>
+                                            <button onclick="goView(${question.id})"
+                                                    class="btn btn-primary btn-sm">查看
+                                            </button>
+                                            <button onclick="goUpdate(${question.id})"
+                                                    class="btn btn-warning btn-sm">
+                                                编辑
+                                            </button>
+                                            <button onclick="deleteQuestion(${question.id})"
+                                                    class="btn btn-danger btn-sm">删除
+                                            </button>
+                                        </td>
+                                    </tr>
+                                    <% } %>
+                                    </tbody>
+                                </table>
+                            </div>
+                            <div class="card-footer clearfix">
+                                <ul class="pagination m-0 float-right">
+                                    <%for(var i=1;i<=page.pages;i++){ %>
+                                    <% if(page.pageNum == i){ %>
+                                    <li class="page-item active">
+                                        <a class="page-link" href="?p=${i}&courseId=${curCourseId}&typeId=${curTypeId}">${i}</a>
+                                    </li>
+                                    <%}else{%>
+                                    <li class="page-item">
+                                        <a class="page-link" href="?p=${i}&courseId=${curCourseId}&typeId=${curTypeId}">${i}</a>
+                                    </li>
+                                    <%}%>
+                                    <% }%>
+                                </ul>
+                            </div>
+                            <!-- /.card-body -->
+                        </div>
+                        <!-- /.card -->
+                    </div>
+                </div><!-- /.row -->
+            </div>
         </section>
     </div>
     <!-- 查看模态框 -->
     <%include("view-modal.html"){} %>
-    <!-- 查看模态框 -->
-    <%include("update-modal.html"){} %>
-    <!-- 新增模态框 -->
-    <%include("save-modal.html"){} %>
+    <!-- 导入试题 -->
+    <%include("import-modal.html"){}%>
     <!-- 引入footer -->
     <%include("../../include/footer.html"){} %>
 </div>
 <!-- 引入全局 js 脚本文件 -->
 <% include("../../include/js.html"){} %>
-<script src="/static/plugins/jquery-pagination/jquery.twbsPagination.min.js"></script>
+<!-- 自定义封装 -->
+<script src="/static/js/OesUtil.js"></script>
 <!-- 接口 -->
 <%include("api.html"){}%>
 </body>
